# expo-lingua

./: .env  .env.example  AGENTS.md  README.md  app.config.js  app.json  eas.json  global.css  metro.config.js  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json
.claude/skills/integration-expo/references/: EXAMPLE.md
app/: _layout.tsx  onboarding.tsx
app/(auth)/: _layout.tsx  sign-in.tsx  sign-up.tsx
app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  index.tsx  language-selection.tsx  learn.tsx  profile.tsx
app/api/agent/: start+api.ts  stop+api.ts
app/api/stream/: audio-call+api.ts
app/lesson/: [lessonId].tsx
app/lesson/audio/: [lessonId].tsx
components/: themed-text.tsx
components/auth/: auth-screen.tsx
components/learn/: lesson-row.tsx
components/lesson/: audio-lesson-content.tsx  control-button.tsx
components/navigation/: bottom-tab-bar.tsx
constants/: images.ts  theme.ts
data/: languages.ts  lessons.ts  units.ts  validate-learning-data.ts
hooks/: use-agent-session.ts  use-audio-call-controls.ts  use-audio-call-session.ts  use-audio-lesson-session.ts  use-live-captions.ts
lib/: agent-server.ts  agent.ts  call-id.ts  clerk-server.ts  lesson-status.ts  posthog.ts  stream-server.ts  stream.ts
store/: language-store.ts
theme/: colors.ts  radius.ts  shadows.ts  spacing.ts  typography.ts
types/: learning.ts  react-native-reanimated.d.ts
vision-agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  pyproject.toml
vision-agent/tests/: test_agent.py
