[project]
name = "vision-agent"
version = "0.0.0"
requires-python = ">=3.11,<3.14"

dependencies = [
  "python-dotenv>=1.2.2",
  "fastapi",
  "vision-agents",
  "vision-agents-plugins-openai",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-gemini>=0.6.7",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
]

[tool.vision-agents.agent]
entrypoint = "agent:runner"

[tool.uv]
# onnxruntime>=1.24 dropped macOS x86_64 (Intel) wheels; pin to the last
# version that still ships one so `uv sync` resolves on Intel Macs.
constraint-dependencies = ["onnxruntime<1.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that call real model services",
]
